# OpenAI-Extractor

./: .env  Cargo.toml
src/: main.rs
src/ai_functions/: mod.rs
src/base/: command_line.rs  general.rs
src/models/: mod.rs
src/models/agent_basic/: basic_agent.rs  basic_agents.rs  basic_trait.rs  basic_traits.rs  mod.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_trait.rs  agent_traits.rs  mod.rs
src/models/agents_manager/: managing_agent.rs
src/requests/: call_request.rs
web_template/: Cargo.toml
web_template/src/: code_template.rs.rs
