[package]
name = "rust_autogpt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.24"
async-trait = "0.1.57"
webbrowser = "0.6.0"
strum = "0.24"
strum_macros = "0.24"
ai_functions = "0.1.0"
