[package]
name = "Actix_Server_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
async-trait = "0.1.68"
dotenv = "0.15.0"
reqwest = "0.11.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.28.0"

